[tool.poetry]
name = "bareasgi-jinja2"
version = "3.2.0"
description = "Jinja2 support for bareasgi"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_jinja2" },
]
repository = "https://github.com/rob-blackbourn/bareasgi-jinja2"

[tool.poetry.dependencies]
python = "^3.7"
bareasgi = "^3.7"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
uvicorn = "^0.13"
hypercorn = "^0.11"
uvloop = "^0.15.0"
pylint = "^2.8"
mypy = "^0.812"
autopep8 = "^1.4"
rope = "^0.14.0"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
jetblack-markdown = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
